Prevent left overflow in byline

--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,7 @@
 }
 
 .byline-text {
+  margin-left: 20px;
   text-align: right;
 }
 
